# LoadBalancing

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/demoproject_master/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nanodet_tstl.param
app/src/main/java/com/example/demoproject/: CameraPreview.java  MainActivity.java  NanoDetNcnn.java  Ncnn.java  ReceiveDataTask.java  SendDataTask.java  Yolov8Ncnn.java
app/src/main/java/com/example/demoproject_master/: BboxDataHolder.java  CameraHandler.java  CameraPreview.java  CameraSetting.java  CustomSurfaceListener.java  DataHolder.java  DataHolderDET.java  DataHolderSEG.java  MainActivity.java  NCNN.java  NanoDetNcnn.java  Ncnn.java  ProcessAI.java  ReceiveDET.java  ReceiveDataTask.java  ReceiveSEG.java  SegDataHolder.java  SendDataTask.java  Sender.java  ServerThread.java  ServerThread2.java  ServerThreadDET.java  ServerThreadSEG.java  SocketThread.java  SocketThread2.java  StateSingleton.java  YoloDetNcnn.java  Yolov8Ncnn.java
app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodet_tstl.cpp  nanodet_tstl.h  nanodetncnn.cpp  ncnn.cpp  yolov5.cpp  yolov5.h  yolov5ncnn.cpp  yolov8.cpp  yolov8.h  yolov8ncnn.cpp
app/src/main/proto/: bbox.proto  det.proto  seg.proto
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/demoproject_master/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
